# lvgl-build

./: CMakeLists.txt  readme.md
.github/workflows/: ci_win.yml
